# ProteinTTT

./: .gitignore  CLAUDE.md  ProteinTTT_Colab_2.ipynb  README.md  TMalign  calculate_metrics_script.py  fgr_proteingym_3819781.err  fgr_proteingym_3819781.out  find_pdbs.sh  pyproject.toml  run_bfvd.py  run_cameo.py  run_cameo.sh  run_esm.sh  run_evaluation_bfvd.sh  run_local.sh  setup.py  tune_MSA.py  tune_MSA.sh  tune_grad_clip.sh
all_structures/: HLchain_evaluation.tsv  antigen_evaluation.tsv  cdr_by_CDRs_region.tsv  cdr_evaluation.tsv  cdr_h3_evaluation.tsv  different_sequences.tsv  different_sequences_out.tsv
env_setup/: environment.yml  setup.sh
notebooks/: Analysis.ipynb  Analysis_ApoE.ipynb  Bfvd.ipynb  Bfvd_merge.ipynb  CDR_SAbDab.ipynb  Cameo_Analysis.ipynb  MartsDb.ipynb  ProteinTTT_MSA.ipynb  SAbDab.ipynb  prepare_cameo_dataset.ipynb  run_bfvd.py
proteinttt/: base.py
scripts/: README.md  _ttt.csv  af3_json_to_a3m.py  compare_benchmarks.py  config.yaml  config_LL.yaml  config_MSA.yaml  config_benchmark.yaml  config_marts_db_MSA.yaml  config_marts_db_MSA_continue.yaml  fgr_analysis.py  fgr_proteingym_3820424.err  fgr_proteingym_3820424.out  fgr_proteingym_3820464.err  fgr_proteingym_3820464.out  fgr_proteingym_config.yaml  run_benchmark.py  run_benchmark.sh  run_bfvd.py  run_cameo.py  run_df.py  run_df.sh  run_evaluation.sh  run_fgr_proteingym.py  run_fgr_proteingym.sh  run_ttt_single.py  run_ttt_single.sh  submit_20step_experiments.sh  ttt_single.csv  ttt_single_3501423.out  tune_MSA.py  tune_MSA.sh  tune_grad_clip.py
tests/: A0A6J5KJJ6.a3m  README.md  (+7 more)
(+26 files in other folders)
